--- a/Mask_of_logic.html
+++ b/Mask_of_logic.html
@@ -180,8 +180,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScI8PX9Z2ALrniJTUt-S8Dh70Z4MWkA7bSds8xESM4LnuysMg/viewform?embedded=true" width="640" height="2243" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
                 </div>
             </div>
           
