--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Scavenger Hunt</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/4.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/scavenger.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">AI & DS</h4>
                             </div>
                         </div>
                         <div class="single_propram">
